--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}  : Palashbaria Secondary School{% endblock %}</title>
+  <title>{% block title %} : Bonogram Secondary School{% endblock %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap" rel="stylesheet">
 
@@ -48,10 +48,10 @@
   <footer class="site-footer">
     <div class="footer-container">
       <div class="footer-col">
-        <h4> About</h4><p> Palashbaria Secondary School is committed to academic excellence and character building.</p>
+        <h4> About</h4><p> Bonogram Kishan majdur sammilito Secondary School is committed to academic excellence and character building.</p>
       </div>
       <div class="footer-col">
-        <h4> Contact</h4><p> -Email: s118044@gmail.com <br> -Phone: 01714850660</p>
+        <h4> Contact</h4><p> -Email: Bonogram@gmail.com <br> -Phone: 01907136791</p>
       </div>
       <div class="footer-col">
         <h4> Follow Us</h4><p><a href="www.facebook.com" target="_blank"> Facebook</a><br><a href="twitter.com"> Twitter</a><br><a href="instagram.com"> Instagram</a></p>
