--- a/templates/mpos.html
+++ b/templates/mpos.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Accreditation : Palashbaria Secondary School{% endblock %}
+{% block title %}Accreditation : Bonogram Secondary School{% endblock %}
 {% block content %}
 <h1> Accreditations </h1>
 <div class="teachers-grid">
