--- a/templates/news.html
+++ b/templates/news.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}News : Palashbaria Secondary School{% endblock %}
+{% block title %}News : Bonogram Secondary School{% endblock %}
 {% block content %}
   <h1>All News</h1>
     <div class="news-grid glass-card" style="background-color: rgba(200, 249, 225, 0.712);">
