--- a/templates/news_detail.html
+++ b/templates/news_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ item.title }} : Palashbaria Secondary School{% endblock %}
+{% block title %}{{ item.title }} : Bonogram Secondary School{% endblock %}
 {% block content %}
 <div class="glass-card">
   <h1>{{ item.title }}</h1>
