--- a/templates/result_admin.html
+++ b/templates/result_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage Results : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage Results : Bonogram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
   <h2>Manage Results</h2>
