--- a/templates/results.html
+++ b/templates/results.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Results : Palashbaria Secondary School{% endblock %}
+{% block title %}Results : Bonogram Secondary School{% endblock %}
 {% block content %}
 <h1>Results</h1>
 <div class="grid-2">
   {% for r in results_items %}
-    <div class="glass-card">
+    <div class="glass-card" style="padding: 1.5rem; margin-bottom: 1.5rem; border-radius: 1rem; 
+         box-shadow: 0 4px 12px rgba(168, 56, 56, 0.413); background-color: rgba(173, 231, 123, 0.258);">
       <h3>{{ r.title }}</h3>
       <small>Uploaded: {{ r.timestamp[:10] }}</small>
       <p>{{ r.description }}</p>
