--- a/templates/routine_admin.html
+++ b/templates/routine_admin.html
@@ -1,30 +1,34 @@
 {% extends 'base.html' %}
-{% block title %}Manage Committee : Bonogram Secondary School{% endblock %}
+{% block title %}Manage Routines : Bonogram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
-  <h2>Manage Committee</h2>
+  <h2>Manage Routines</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
       <input type="password" name="password" required>
     </div>
     <div class="form-group">
-      <label>Name:</label>
+      <label>Title (e.g. “Class routine - 2024”):</label>
       <input type="text" name="title" >
     </div>
     <div class="form-group">
-      <label>Subject/Info:</label>
+      <label>Description:</label>
       <textarea name="description" rows="3" ></textarea>
     </div>
     <div class="form-group">
-      <label>Photo:</label>
-      <input type="file" name="photo" accept="image/*" required>
+      <label>PDF File:</label>
+      <input type="file" name="photo" accept="application/pdf" required>
     </div>
     <div class="form-actions">
       {% if last %}
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last member</button>
+        <button type="submit" name="action" value="delete" class="btn btn-danger">
+          Delete Last Routine
+        </button>
       {% endif %}
-      <button type="submit" name="action" value="post" class="btn btn-primary">Add member</button>
+      <button type="submit" name="action" value="post" class="btn btn-primary">
+        Upload New Routine
+      </button>
     </div>
   </form>
 </div>
