--- a/templates/student_admin.html
+++ b/templates/student_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage Students : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage Students : Bonogram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
   <h2>Manage Students</h2>
