--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Admin Panel: Palashbaria Secondary School{% endblock %}
+{% block title %}Admin Panel: Bonogram Secondary School{% endblock %}
 {% block content %}
 
 <style>
@@ -67,9 +67,8 @@
     <a href="{{ url_for('committee_admin') }}" class="admin-link"><span>🏬</span> Manage Committees</a>
     <a href="{{ url_for('student_admin') }}" class="admin-link"><span>👨‍🎓</span> Manage Students</a>
     <a href="{{ url_for('mpo_admin') }}" class="admin-link"><span>👉🏼</span> Manage Accreditations</a>
-    
-    <a href="{{ url_for('result_admin') }}" class="admin-link">
-  <span>📊</span> Manage Results
+    <a href="{{ url_for('routine_admin') }}" class="admin-link"><span>📊</span> Manage Routine
+    <a href="{{ url_for('result_admin') }}" class="admin-link"><span>📊</span> Manage Results
 </a>
 <a href="{{ url_for('logout') }}" class="admin-link" style="color: red;"><span>🔓</span> <b>Logout</b></a>
   </div>
