--- a/templates/committee_detail.html
+++ b/templates/committee_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ committee.name }} : Palashbaria Secondary School{% endblock %}
+{% block title %}{{ committee.name }} : Bonogram Secondary School{% endblock %}
 {% block content %}
 <style>
 
