--- a/templates/committees.html
+++ b/templates/committees.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Committee : Palashbaria Secondary School{% endblock %}
+{% block title %}Committee : Bonogram Secondary School{% endblock %}
 {% block content %}
 <h1>Our Committee</h1>
 <div class="teachers-grid">
