--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Gallery : Palashbaria Secondary School{% endblock %}
+{% block title %}Gallery : Bonogram Secondary School{% endblock %}
 {% block content %}
 <h1 class="text-center">Gallery</h1>
 <div class="gallery-grid">
