--- a/templates/gallery_detail.html
+++ b/templates/gallery_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ item.title }} : Palashbaria Secondary School{% endblock %}
+{% block title %}{{ item.title }} : Bonogram Secondary School{% endblock %}
 {% block content %}
 <div class="detail-container">
   <div style=" font-size: large; background-color: rgba(212, 231, 195, 0.872); test-align: center; padding: 10px; border-radius: 5px;">
