--- a/templates/mpo_admin.html
+++ b/templates/mpo_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage Accreditation  : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage Accreditation  : Bonogram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
   <h2>Manage Accreditation </h2>
