--- a/templates/mpo_detail.html
+++ b/templates/mpo_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ mpo.name }} : Palashbaria Secondary School{% endblock %}
+{% block title %}{{ mpo.name }} : Bonogram Secondary School{% endblock %}
 {% block content %}
 <style>
 
