--- a/templates/news_admin.html
+++ b/templates/news_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage News : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage News : Bonogram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-form">
   <h2>Manage News</h2>
