--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
     
 
     <!-- Welcome Heading -->
-    <h1 class="hero-title animate-fade-in" style="color: rgb(57, 7, 7);">বনগ্রাম কিষাণ মজদুর সম্মিলিত মধ্যমিক বিদ্যালয়ে স্বাগতম</h1>
+    <h1 class="hero-title animate-fade-in" style="color: rgb(29, 1, 1);">বনগ্রাম কিষাণ মজদুর সম্মিলিত মাধ্যমিক বিদ্যালয়ে স্বাগতম</h1>
 
     <!-- Tagline -->
     <p class="hero-subtitle animate-fade-in delay-1" style="color: rgb(9, 45, 9);">
