Update HTML templates, app.py, JSON files, and add new images

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         <h4> About</h4><p> Bonogram Kishan majdur sammilito Secondary School is committed to academic excellence and character building.</p>
       </div>
       <div class="footer-col">
-        <h4> Contact</h4><p> -Email: Bonogram@gmail.com <br> -Phone: 01907136791</p>
+        <h4> Contact</h4><p> Email: 118032school@gmail.com <br> Phone: 01309-118032</p>
       </div>
       <div class="footer-col">
         <h4> Follow Us</h4><p><a href="www.facebook.com" target="_blank"> Facebook</a><br><a href="twitter.com"> Twitter</a><br><a href="instagram.com"> Instagram</a></p>
