--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,27 +7,27 @@
   <h2>Contact the school</h2>
   <p>You can reach Bonogram K M S Secondary School at:</p>
   <ul>
-    <li><strong>Phone:</strong> 01907136791 </li>
-    <li><strong>Email:</strong> Bonogram@gmail.com</li>
-    <li><strong>Address:</strong> Mohammadpur, Magura, Bangladesh</li>
+    <li><strong>Phone:</strong> 01309118032 </li>
+    <li><strong>Email:</strong> 118032school@gmail.com</li>
+    <li><strong>Address:</strong> Bongram,Mohammadpur,magura,Bangladesh</li>
   </ul>
 </div>
 <div class="glass-card">
   <h2>Contact for information</h2>
   <p>You can ask information about Bonogram K M S Secondary School at:</p>
   <ul>
-    <li><strong>Phone:</strong> 01907136791 </li>
-    <li><strong>Email:</strong>  Bonogram@gmail.com</li>
-    <li><strong>Address:</strong>Mohammadpur, Magura, Bangladesh</li>
+    <li><strong>Phone:</strong> 01309118032 </li>
+    <li><strong>Email:</strong> 118032school@gmail.com</li>
+    <li><strong>Address:</strong> Bongram,Mohammadpur,magura,Bangladesh</li>
   </ul>
 </div>
 <div class="glass-card">
   <h2>Contact to report an issue</h2>
   <p>You can report any issue at:</p>
   <ul>
-    <li><strong>Phone:</strong> 01907136791 </li>
-    <li><strong>Email:</strong> Bonogram@gmail.com</li>
-    <li><strong>Address:</strong> Bonogram K M S, Mohammadpur, Magura, Bangladesh</li>
+    <li><strong>Phone:</strong> 01309118032 </li>
+    <li><strong>Email:</strong> 118032school@gmail.com</li>
+    <li><strong>Address:</strong> Bongram,Mohammadpur,magura,Bangladesh</li>
   </ul>
 </div>
 {% endblock %}
