--- a/templates/gallery_admin.html
+++ b/templates/gallery_admin.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label>Photos:</label>
-      <input type="file" name="photos" multiple accept="image/*" required>
+      <input type="file" name="photos" multiple accept="image/*" >
     </div>
     <div class="form-actions">
       {% if last %}
