--- a/templates/mpo_admin.html
+++ b/templates/mpo_admin.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label>Photo:</label>
-      <input type="file" name="photo" accept="image/*" required>
+      <input type="file" name="photo" accept="image/*" >
     </div>
     <div class="form-actions">
       {% if last %}
