--- a/templates/routine_admin.html
+++ b/templates/routine_admin.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Manage Routines : Bonogram Secondary School{% endblock %}
+{% block title %}Manage Routines : Palashbaria Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage Routines</h2>
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+    <h2>Manage Routines</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -20,6 +22,10 @@
       <label>PDF File:</label>
       <input type="file" name="photo" accept="application/pdf" >
     </div>
+    <div class="form-group">
+      <label>Position:</label>
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
+    </div>
     <div class="form-actions">
       {% if last %}
         <button type="submit" name="action" value="delete" class="btn btn-danger">
@@ -31,5 +37,26 @@
       </button>
     </div>
   </form>
+  </div>
+  <div class="admin-news glass-card">
+    <h3>Routine</h3>
+    {% for r in last %}
+    <div class="glass-card" style="padding: 1.5rem; margin-bottom: 1.5rem; border-radius: 1rem; 
+         box-shadow: 0 4px 12px rgba(70, 3, 3, 0.413); background-color: rgba(231, 186, 123, 0.258);">
+      <h3>{{ r.title }}</h3>
+      <small>Uploaded: {{ r.timestamp[:10] }}</small>
+      
+      <p>{{ r.description }}</p>
+      
+      <a href="{{ url_for('static', filename='files/routine/' ~ r.filename) }}"
+         target="_blank" class="btn btn-secondary mt-2">
+        📄 Download / View PDF
+      </a>
+      <p style="text-align: center;">Position : {{loop.index}}</p>
+    </div>
+  {% else %}
+    <p>No routine sheets published yet.</p>
+  {% endfor %}
+  </div>
 </div>
 {% endblock %}
