--- a/templates/committee_admin.html
+++ b/templates/committee_admin.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Manage Committee : Bonogram Secondary School{% endblock %}
+{% block title %}Manage committees : Palashbaria Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage Committee</h2>
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+     <h2>Manage committees</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -18,14 +20,34 @@
     </div>
     <div class="form-group">
       <label>Photo:</label>
-      <input type="file" name="photo" accept="image/*" >
+      <input type="file" name="photo" accept="image/*"  >
+    </div>
+    <div class="form-group">
+      <label>Position:</label>
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
     </div>
     <div class="form-actions">
       {% if last %}
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last member</button>
+
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last committee</button>
       {% endif %}
-      <button type="submit" name="action" value="post" class="btn btn-primary">Add member</button>
+      <button type="submit" name="action" value="post" class="btn btn-primary">Add committee</button>
     </div>
   </form>
+  </div>
+  <div class="admin-news glass-card">
+    <h1>Our committee</h1>
+
+<div class="teachers-grid">
+  {% for committee in last %}
+  <a href="{{ url_for('committee_detail', idx=loop.index0) }}" class="glass-card teacher-card">
+    <h3 style="color: black;">{{ committee.title }}</h3>
+    
+    <img src="{{ url_for('static', filename='images/committees/' + committee.filename) }}" alt="{{ committee.title }}">
+    <h3 style="color: black; text-align: center;">Position : {{ loop.index }}</h3>
+  </a>
+  {% endfor %}
+</div>
+  </div>
 </div>
 {% endblock %}
