--- a/templates/mpo_admin.html
+++ b/templates/mpo_admin.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Manage Accreditation  : Bonogram Secondary School{% endblock %}
+{% block title %}Manage mpos : Palashbaria Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage Accreditation </h2>
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+     <h2>Manage mpos</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -18,14 +20,34 @@
     </div>
     <div class="form-group">
       <label>Photo:</label>
-      <input type="file" name="photo" accept="image/*" >
+      <input type="file" name="photo" accept="image/*"  >
+    </div>
+    <div class="form-group">
+      <label>Position:</label>
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
     </div>
     <div class="form-actions">
       {% if last %}
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last Accreditation </button>
+
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last mpo</button>
       {% endif %}
-      <button type="submit" name="action" value="post" class="btn btn-primary">Add Accreditation </button>
+      <button type="submit" name="action" value="post" class="btn btn-primary">Add mpo</button>
     </div>
   </form>
+  </div>
+  <div class="admin-news glass-card">
+    <h1>Our mpo</h1>
+
+<div class="teachers-grid">
+  {% for mpo in last %}
+  <a href="{{ url_for('mpo_detail', idx=loop.index0) }}" class="glass-card teacher-card">
+    <h3 style="color: black;">{{ mpo.title }}</h3>
+    
+    <img src="{{ url_for('static', filename='images/mpos/' + mpo.filename) }}" alt="{{ mpo.title }}">
+    <h3 style="color: black; text-align: center;">Position : {{ loop.index }}</h3>
+  </a>
+  {% endfor %}
+</div>
+  </div>
 </div>
 {% endblock %}
