--- a/templates/news_admin.html
+++ b/templates/news_admin.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Manage News : Bonogram Secondary School{% endblock %}
+{% block title %}Manage News : Palashbaria Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage News</h2>
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+     <h2>Manage News</h2>
   <form method="post">
     <div class="form-group">
       <label>Password:</label>
@@ -16,12 +18,30 @@
       <label>Description:</label>
       <textarea name="description" rows="4" ></textarea>
     </div>
+    <div class="form-group">
+      <label>Position:</label>
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
+    </div>
     <div class="form-actions">
       {% if last %}
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last News</button>
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete News</button>
       {% endif %}
       <button type="submit" name="action" value="post" class="btn btn-primary">Post News</button>
     </div>
   </form>
+  </div>
+  <div class="admin-news glass-card">
+    <h1>All News</h1>
+    <div class="news-grid glass-card">
+      {% for news in last %}
+        <a href="{{ url_for('news_detail', idx=loop.index0) }}">
+          <h3>{{ news.title }}</h3>
+          <small>{{ news.timestamp[:10] }}</small>
+        </a>
+      {% else %}
+        <p>No news yet.</p>
+      {% endfor %}
+    </div>
+  </div>
 </div>
 {% endblock %}
