--- a/templates/result_admin.html
+++ b/templates/result_admin.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Manage Results : Bonogram Secondary School{% endblock %}
+{% block title %}Manage Results : Palashbaria Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage Results</h2>
+
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+     <h2>Manage Results</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -15,6 +18,10 @@
     <div class="form-group">
       <label>Description:</label>
       <textarea name="description" rows="3" ></textarea>
+    </div>
+    <div class="form-group">
+      <label>Position:</label>
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
     </div>
     <div class="form-group">
       <label>PDF File:</label>
@@ -31,5 +38,26 @@
       </button>
     </div>
   </form>
+  </div>
+  <div class="admin-news glass-card">
+    <h1>Results</h1>
+<div class="grid-2">
+  {% for r in last %}
+    <div class="glass-card" style="padding: 1.5rem; margin-bottom: 1.5rem; border-radius: 1rem; 
+         box-shadow: 0 4px 12px rgba(168, 56, 56, 0.413); background-color: rgba(173, 231, 123, 0.258);">
+      <h3>{{ r.title }}</h3>
+      <small>Uploaded: {{ r.timestamp[:10] }}</small>
+      <p>{{ r.description }}</p>
+      <a href="{{ url_for('static', filename='files/results/' ~ r.filename) }}"
+         target="_blank" class="btn btn-secondary mt-2">
+        📄 Download / View PDF
+      </a>
+    </div>
+  {% else %}
+    <p>No result sheets published yet.</p>
+  {% endfor %}
+</div>
+  </div>
 </div>
 {% endblock %}
+
