--- a/templates/student_admin.html
+++ b/templates/student_admin.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Manage Students : Bonogram Secondary School{% endblock %}
+{% block title %}Manage students : Palashbaria Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage Students</h2>
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+     <h2>Manage students</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -13,19 +15,39 @@
       <input type="text" name="title" >
     </div>
     <div class="form-group">
-      <label>Details:</label>
+      <label>Subject/Info:</label>
       <textarea name="description" rows="3" ></textarea>
     </div>
     <div class="form-group">
       <label>Photo:</label>
-      <input type="file" name="photo" accept="image/*" >
+      <input type="file" name="photo" accept="image/*"  >
+    </div>
+    <div class="form-group">
+      <label>Position:</label>
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
     </div>
     <div class="form-actions">
       {% if last %}
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last Student</button>
+
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last student</button>
       {% endif %}
-      <button type="submit" name="action" value="post" class="btn btn-primary">Add Student</button>
+      <button type="submit" name="action" value="post" class="btn btn-primary">Add student</button>
     </div>
   </form>
+  </div>
+  <div class="admin-news glass-card">
+    <h1>Our student</h1>
+
+<div class="teachers-grid">
+  {% for student in last %}
+  <a href="{{ url_for('student_detail', idx=loop.index0) }}" class="glass-card teacher-card">
+    <h3 style="color: black;">{{ student.title }}</h3>
+    
+    <img src="{{ url_for('static', filename='images/students/' + student.filename) }}" alt="{{ student.title }}">
+    <h3 style="color: black; text-align: center;">Position : {{ loop.index }}</h3>
+  </a>
+  {% endfor %}
+</div>
+  </div>
 </div>
 {% endblock %}
