--- a/templates/teacher_admin.html
+++ b/templates/teacher_admin.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Manage Teachers : Bonogram Secondary School{% endblock %}
+{% block title %}Manage Teachers : Palashbaria Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage Teachers</h2>
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+     <h2>Manage Teachers</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -20,14 +22,32 @@
       <label>Photo:</label>
       <input type="file" name="photo" accept="image/*"  >
     </div>
+    <div class="form-group">
+      <label>Position:</label>
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
+    </div>
     <div class="form-actions">
       {% if last %}
+
         <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last Teacher</button>
       {% endif %}
       <button type="submit" name="action" value="post" class="btn btn-primary">Add Teacher</button>
     </div>
   </form>
+  </div>
+  <div class="admin-news glass-card">
+    <h1>Our teacher</h1>
+
+<div class="teachers-grid">
+  {% for teacher in last %}
+  <a href="{{ url_for('teacher_detail', idx=loop.index0) }}" class="glass-card teacher-card">
+    <h3 style="color: black;">{{ teacher.title }}</h3>
+    
+    <img src="{{ url_for('static', filename='images/teachers/' + teacher.filename) }}" alt="{{ teacher.title }}">
+    <h3 style="color: black; text-align: center;">Position : {{ loop.index }}</h3>
+  </a>
+  {% endfor %}
 </div>
-
-
+  </div>
+</div>
 {% endblock %}
