--- a/templates/gallery_admin.html
+++ b/templates/gallery_admin.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Manage Gallery : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage mpos : Bongram Secondary School{% endblock %}
 {% block content %}
-<div class="admin-form">
-  <h2>Manage Gallery</h2>
+<div class="admin-container">
+  <div class="admin-form">
+    <!-- form content -->
+     <h2>Manage Gallery</h2>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label>Password:</label>
@@ -22,23 +24,18 @@
     </div>
     <div class="form-group">
       <label>Position:</label>
-      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete" required> 
     </div>
     <div class="form-actions">
       
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Item</button>
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete </button>
       
         <button type="submit" name="action" value="post" class="btn btn-primary">Post to Gallery</button>
     </div>
   </form>
-</div>
-
-<div>
-  <p>
-    -
-  </p>
-</div>
-<h1 class="text-center">Gallery</h1>
+  </div>
+  <div class="admin-news glass-card">
+    <h1 class="text-center">Gallery</h1>
 <div class="gallery-grid">
   {% for idx, item in enumerate(gallery_items) %}
     <a href="{{ url_for('gallery_detail', idx=idx) }}" class="gallery-link">
@@ -49,9 +46,10 @@
           class="gallery-img">
         <h3 style="text-align: center;">{{ item.title }}</h3>
         <!-- print item number -->
-         <p style="text-align: center;">{{ idx + 1 }}</p>
+         <p style="text-align: center;"> position : {{ idx + 1 }}</p>
       </div>
     </a>
   {% endfor %}
+</div>
 </div>
 {% endblock %}
