--- a/templates/mpo_admin.html
+++ b/templates/mpo_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage mpos : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage mpos : Bongram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-container">
   <div class="admin-form">
@@ -24,14 +24,14 @@
     </div>
     <div class="form-group">
       <label>Position:</label>
-      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete" required> 
     </div>
     <div class="form-actions">
       {% if last %}
 
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete Last mpo</button>
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete </button>
       {% endif %}
-      <button type="submit" name="action" value="post" class="btn btn-primary">Add mpo</button>
+      <button type="submit" name="action" value="post" class="btn btn-primary">Post</button>
     </div>
   </form>
   </div>
