--- a/templates/news_admin.html
+++ b/templates/news_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage News : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage News : Bongram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-container">
   <div class="admin-form">
@@ -20,13 +20,13 @@
     </div>
     <div class="form-group">
       <label>Position:</label>
-      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete" required> 
     </div>
     <div class="form-actions">
       {% if last %}
-        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete News</button>
+        <button type="submit" name="action" value="delete" class="btn btn-danger">Delete </button>
       {% endif %}
-      <button type="submit" name="action" value="post" class="btn btn-primary">Post News</button>
+      <button type="submit" name="action" value="post" class="btn btn-primary">Post </button>
     </div>
   </form>
   </div>
@@ -37,6 +37,7 @@
         <a href="{{ url_for('news_detail', idx=loop.index0) }}">
           <h3>{{ news.title }}</h3>
           <small>{{ news.timestamp[:10] }}</small>
+          <h3 style="color: black; text-align: center;">Position : {{ loop.index }}</h3>
         </a>
       {% else %}
         <p>No news yet.</p>
