--- a/templates/routine_admin.html
+++ b/templates/routine_admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Manage Routines : Palashbaria Secondary School{% endblock %}
+{% block title %}Manage Routines : Bongram Secondary School{% endblock %}
 {% block content %}
 <div class="admin-container">
   <div class="admin-form">
@@ -24,12 +24,12 @@
     </div>
     <div class="form-group">
       <label>Position:</label>
-      <input type="number" name="sl" placeholder="Enter position where you want to add/delete"> 
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete" required> 
     </div>
     <div class="form-actions">
       {% if last %}
         <button type="submit" name="action" value="delete" class="btn btn-danger">
-          Delete Last Routine
+          Delete 
         </button>
       {% endif %}
       <button type="submit" name="action" value="post" class="btn btn-primary">
@@ -44,8 +44,7 @@
     <div class="glass-card" style="padding: 1.5rem; margin-bottom: 1.5rem; border-radius: 1rem; 
          box-shadow: 0 4px 12px rgba(70, 3, 3, 0.413); background-color: rgba(231, 186, 123, 0.258);">
       <h3>{{ r.title }}</h3>
-      <small>Uploaded: {{ r.timestamp[:10] }}</small>
-      
+      <small>Uploaded: {{ r.timestamp[:10] }}</small>    
       <p>{{ r.description }}</p>
       
       <a href="{{ url_for('static', filename='files/routine/' ~ r.filename) }}"
