--- a/templates/result_admin.html
+++ b/templates/result_admin.html
@@ -36,6 +36,18 @@
       <button type="submit" name="action" value="post" class="btn btn-primary">
         Upload New Result
       </button>
+      {%if last|length > 1 %}
+        <button type="submit" name="action" value="swap" class="btn btn-danger">Swap</button>
+      {% endif %}
+    </div>
+    <br>
+    <div class="form-group">
+      {%if last|length > 1 %}
+        <span>
+          <input type="number" name="idx1" placeholder="swap position 1"> 
+        <input type="number" name="idx2" placeholder="swap position 2"> 
+        </span>
+      {% endif %}
     </div>
   </form>
   </div>
