--- a/templates/result_admin.html
+++ b/templates/result_admin.html
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
       <label>Position:</label>
-      <input type="number" name="sl" placeholder="Enter position where you want to add/delete" required> 
+      <input type="number" name="sl" placeholder="Enter position where you want to add/delete" > 
     </div>
     <div class="form-group">
       <label>PDF File:</label>
